# tree-sitter-ld

./: Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  flake.nix  grammar.js  package.json  pyproject.toml  setup.py
bindings/c/: tree-sitter-ld.h  tree-sitter-ld.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/tree_sitter_ld/: __init__.py  binding.c
bindings/rust/: lib.rs
src/: grammar.json  node-types.json  parser.c
test/corpus/: corpus.txt
